2006-02-20  Derek Scherger  <derek@echologic.com>

	* restrictions.{cc,hh}: attempt to simplify and remove duplication
	
2006-02-20  Derek Scherger  <derek@echologic.com>

	* commands.cc (status, ls_known, find_unknown_and_ignored,
	find_missing, commit, diff, revert, log): add excludes to restrictions
	* restrictions.{cc,hh}: preliminary support for excludes and unit
	tests to see if it works

2006-02-13  Derek Scherger  <derek@echologic.com>

	* app_state.{cc,hh}: 
	* globis.{cc,hh}: make exclude_patterns a vector rather than a
	set so that restriction includes/excludes are of the same type

2006-01-10  Derek Scherger  <derek@echologic.com>

	* tests/t_revert_unchanged.at: new test to check that reverting
	nothing but unchanged files doesn't end up with an empty
	restriction and revert everything
	* testsuite.at: call it

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* packet.cc (packet_roundabout_test): Test rdata packets too.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* netsync.cc (session): 
	* commands.cc (read): Adjust to match previous change.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* packet.{hh,cc} (struct packet_db_writer): Remove old guard
	against accidentally ingesting public keys -- this has not been
	useful for some years.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* diff_patch.hh (struct content_merger): Oops, forgot to remove
	the merge2 prototype.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* std_hooks.lua: 
	* lua.cc (hook_merge2): 
	* diff_patch.cc (try_to_merge_files): Remove merge2 code, since we
	no longer do merge2's.  (We can always revive it if we add suture
	support.)

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* packet.cc (consume_file_delta): Remove unused 4-argument form.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* lua.{cc,hh} (hook_resolve_file_conflict)
	(hook_resolve_dir_conflict): Remove dead code.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* tests/t_selectors_b_h.at, testsuite.at: New test.
